--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,13 @@ dnspython==2.6.1
 fastapi==0.110.0
 h11==0.14.0
 idna==3.6
+Jinja2==3.1.3
+MarkupSafe==2.1.5
 passlib==1.7.4
 pydantic==2.6.4
 pydantic_core==2.16.3
 pymongo==4.6.2
+python-multipart==0.0.9
 sniffio==1.3.1
 starlette==0.36.3
 typing_extensions==4.10.0
